@startuml

title __FACE_RECOGNITION_SYSTEM_KR (2)'s Class Diagram__\n

  package application {
    class CoreConfiguration {
    }
  }
  

  package application {
    class FaceBio {
    }
  }
  

  package application {
    class FaceBioPhoto {
    }
  }
  

  package application {
    class FaceDetector {
    }
  }
  

  package application {
    class LoaderAndTrainer {
    }
  }
  

  package application {
    class Main {
    }
  }
  

  package application {
    class NamesWrapperDto {
    }
  }
  

  package application {
    class SampleController {
    }
  }
  

  FaceDetector -up-|> Runnable
  FaceDetector o-- LoaderAndTrainer : newLoaderAndTrainer
  FaceDetector o-- FaceBioPhoto : faceBioPhoto
  LoaderAndTrainer o-- NamesWrapperDto : namesWrapperDto
  Main -up-|> Application
  SampleController o-- FaceDetector : newFaceDetector
  SampleController o-- FaceBio : faceBio


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
